# mcp-exec

./: .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  CONDUCTOR_DOCUMENTATION_INDEX.md  CONDUCTOR_QUICK_REFERENCE.md  CONDUCTOR_TASK_EXECUTION_CARDS.md  CONDUCTOR_TASK_REFERENCE.md  CONDUCTOR_VALIDATION_REPORT.md  CONNECTIVITY_TEST_INDEX.md  CONNECTIVITY_TEST_REPORT.md  DEPLOYMENT.md  DNS-CONFIGURATION-REPORT.md  DNS_RESOLUTION_INVESTIGATION.md  DNS_TEST_COMMANDS_REFERENCE.sh  DNS_TEST_REPORT.md  FINAL_PRODUCTION_READY.md  HOSTNAME_SETUP_VERIFICATION.md  INFRASTRUCTURE_README.md  INFRASTRUCTURE_SUMMARY.md  MIRRORING_GAP_ANALYSIS.md  NEW_PAT_CREDENTIALS.txt  NEXT_STEPS.md  PRODUCTION_READINESS_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY_GROUP_AUDIT_REPORT.md  TEST_RESULTS_SUMMARY.txt  ci-smoke.yml  ci-terraform.yml  infrastructure-config.json  infrastructure-summary.csv  package-lock.json  package.json  tsconfig.base.json  worktree-add
maptimize/: .env  .env.example  CLAUDE.md  DIAGNOSTIC_GUIDE.md  README.md  TEST_COVERAGE_SUMMARY.md  conftest.py  docker-compose.yml  pyproject.toml  test-handlers-registration.py
maptimize/.claude/: settings.local.json
maptimize/.github/workflows/: ecr-build-push.yml
maptimize/config/: processes.json
maptimize/docs/: DEPLOYMENT.md  TROUBLESHOOTING.md
maptimize/infrastructure/: Dockerfile  SLACK_APP_SETUP.md  check-slack-app.sh  debug-container.sh  deploy.sh  diagnose-deployment.sh  diagnose-slack-events.md  docker-compose.production.yml  ec2-setup.md  fix-secret-structure.sh  launch-ec2.sh  maptimize.service  setup-ecr-credential-helper.sh  test-slack-config.py  user-data.sh
maptimize/infrastructure/iam/: ecr-policy.json  github-actions-ecr-policy.json  pcl-deny-policy.json  secrets-policy.json
maptimize/logs/: agents.json  status_line.json  subagent_stop.json  user_prompt_submit.json
maptimize/src/maptimize/: __init__.py  __main__.py  bot.py  config.py  formatter.py  handlers.py  utils.py
maptimize/tests/: test_config.py  test_deployment_config.py  test_e2e_bot.py  test_iam_policies.py  test_integration.py
projects/asksplunk/: .dockerignore  .env.test.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  user-data.sh
projects/asksplunk/.claude/: settings.json
projects/asksplunk/iam/: dynamodb-policy.json  ecr-policy.json  github-actions-ecr-policy.json  pcl-deny-policy.json  secrets-policy.json
projects/asksplunk/infrastructure/: create-survey-gsi.sh  create-usage-gsi.sh  deploy-build-push.sh  run-indexer.py  validate.sh
projects/asksplunk/scripts/: pin_welcome_message.py  send_survey.py  send_welcome_messages.py
projects/bravo/: .gitignore  CLAUDE.md  pyproject.toml
projects/bravo/docs/: bravo_design_doc.md  openapi_api_contracts.yaml
projects/bravo/infrastructure/: Dockerfile.app  docker-compose.local.yml
projects/bravo/mcp-jira/: .env.example  Dockerfile  package-lock.json  package.json
projects/bravo/tests/: test_blocks.py  test_deps.py  test_di.py  test_jira.py  test_llm.py  test_nudge.py  test_pat.py  test_poller.py  test_queries.py  test_resilience.py  test_secrets.py  test_slack.py  test_slack_pat.py
projects/ketchup/: .env.test.example  .gitignore  .scoutignore  CLAUDE.md  DRY_ANALYSIS_REPORT.md  DRY_FINDINGS_QUICK_REFERENCE.md  DRY_REFACTORING_CODE_EXAMPLES.md  INVESTIGATION.md  README.md  check  conftest.py  deploy  pyproject.toml  setup  worktree-add
projects/ketchup/.claude/: settings.json
projects/ketchup/.conductor/: maintenance-mode.yaml
projects/ketchup/.githooks/: pre-commit  pre-push
projects/ketchup/.serena/: project.yml
projects/ketchup/analysis/: registered_services_summary.json
projects/ketchup/channel_metadata_updater/: CLAUDE.md  __init__.py  async_runner.py  channel_processor.py  main.py  metadata_extractor.py  metadata_processor.py  metadata_storage.py  metadata_updater.py  scheduler.py
projects/ketchup/corp_jira_mcp/: TDD_RED_PHASE_SUMMARY.md  index.ts  index_original.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
projects/ketchup/infrastructure/: Dockerfile.access-monitor  Dockerfile.app-local  Dockerfile.app-multistage  Dockerfile.csopm-notifier  Dockerfile.elasticsearch-monitor  Dockerfile.jira-pat-rotator  Dockerfile.jira-reporter  Dockerfile.maintenance_fetcher  Dockerfile.mcp-jira  Dockerfile.status-updater  Dockerfile.unified-scheduler  Dockerfile.updater  TYPEDDI_DEPLOYMENT_CHECKLIST.md  agent.env  azure.env  common.env  csopm.env  deploy-ketchup.sh  deploy-quick.sh  deploy-status-updater.sh  docker-compose.agent.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  features.env  healthcheck-chromadb.sh  healthcheck-csopm-notifier.sh  healthcheck-jira-pat-rotator.sh  healthcheck-scheduler.sh  monitor-logs.sh  nginx.conf  performance.env  requirements.txt  setup-mcp-env.sh  validate.sh
projects/ketchup/jira_reporter/: CLAUDE.md  __init__.py  archive_handler.py  channel_monitor.py  jira_service.py  jira_ticket_discovery.py  main.py  report_generator.py
projects/ketchup/ketchup-app/: main.py
projects/ketchup/ketchup-log-viewer/: .gitignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  validation-test.js  vitest.config.ts
projects/ketchup/ketchup_access_request_monitor/: CLAUDE.md  monitor.py
projects/ketchup/ketchup_csopm_notifier/: __init__.py  container.py  main.py  scheduler.py
projects/ketchup/ketchup_jira_pat_rotator/: main.py  rotator.py  scheduler.py
projects/ketchup/ketchup_maintenance_fetcher/: CLAUDE.md  main.py  scheduler.py
projects/ketchup/ketchup_status_updater/: CLAUDE.md  __init__.py  main.py  processor.py  scheduler.py  status_generator.py
projects/ketchup/ketchup_unified_scheduler/: __init__.py  engine.py  health_monitor.py  main.py  task_config.py  task_registry.py
projects/ketchup/logs/: agents.json  status_line.json  subagent_stop.json  user_prompt_submit.json
(+4735 files in other folders)
