[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maptimize"
version = "0.1.0"
description = "Map optimization and management system"
requires-python = ">=3.11"
authors = [
    {name = "Camp Ops EMEA", email = "team@campops.com"}
]
license = {text = "MIT"}
keywords = ["maps", "optimization", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "slack-bolt[async]",
    "aioboto3",
    "structlog",
    "pydantic",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "black",
    "ruff",
    "isort",
    "pyyaml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short"
markers = [
    "asyncio: marks tests as async",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
mypy_path = "src"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",
    "F",
    "W",
    "I001",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
]

[tool.isort]
profile = "black"
line_length = 100
py_version = "311"
src_paths = ["src", "tests"]

[tool.hatch.version]
path = "src/maptimize/__init__.py"
