[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asksplunk"
version = "0.1.0"
description = "Slack bot for natural language to SPL query translation using RAG with Azure OpenAI"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Harrison", email = "harrison@adobe.com"},
    {name = "Maciej", email = "maciej@adobe.com"},
    {name = "Gary", email = "gary@adobe.com"},
]
keywords = ["slack", "splunk", "spl", "openai", "rag", "chromadb", "adobe-campaign"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business",
]

dependencies = [
    # Slack Integration
    "slack-bolt[async]",
    "slack-sdk",

    # AWS Services
    "aioboto3",
    "botocore",

    # Azure OpenAI
    "openai",

    # Vector Database
    "chromadb",

    # Logging
    "structlog",

    # Async Support
    "aiohttp",

    # Type Hints
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",

    # AWS Mocking
    "moto[dynamodb]",

    # Code Quality
    "black",
    "ruff",
    "mypy",

    # Type Stubs
    "types-aioboto3",
    "boto3-stubs[dynamodb]",
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "moto[dynamodb]",
]

[project.urls]
Homepage = "https://github.com/harrison_adobe/asksplunk"
Documentation = "https://github.com/harrison_adobe/asksplunk/tree/main/docs"
Repository = "https://github.com/harrison_adobe/asksplunk.git"
"Issue Tracker" = "https://github.com/harrison_adobe/asksplunk/issues"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | .venv
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "E203",   # whitespace before ':'
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG", "F841", "E402"]  # Allow unused arguments/variables and late imports in tests
"src/asksplunk/cli/*" = ["C901"]  # Allow complex functions in CLI tools
"src/asksplunk/slack/client.py" = ["C901"]  # Handler registration is complex by nature

[tool.ruff.isort]
known-first-party = ["asksplunk"]
known-third-party = ["slack_bolt", "openai", "chromadb"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
strict_equality = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    ".eggs",
]

[[tool.mypy.overrides]]
module = [
    "aioboto3.*",
    "chromadb.*",
    "slack_bolt.*",
    "slack_sdk.*",
    "moto.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/asksplunk"]
branch = true
omit = [
    "*/__init__.py",
    "*/conftest.py",
    "*/.venv/*",
    "*/cli/*",  # CLI tools are interactive, not unit tested
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 80
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["asksplunk"]
skip_gitignore = true
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.hatch.version]
path = "src/asksplunk/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'
