[project]
name = "bravo"
version = "0.1.0"
description = "Bravo - Championing Our Data - Jira hygiene nudge system"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Campaign Operations Team" }
]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "aiohttp",
    "slack-sdk",
    "structlog",
    "httpx",
    "openai",
    "aioboto3",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "black",
    "isort"
]

[project.scripts]
bravo-api = "bravo.main:main"
bravo-worker = "bravo.worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bravo"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
